Fix overflow issue by adding scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ section {
     height: 550px;
     border-radius: 0 0 20px 20px;
     padding: 15px;
+    overflow-y: scroll;
 }
 
 #to-do {
